# template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Jenkinsfile  Jenkinsfile.old  LICENSE  README.md  makefile
doc/: mainpage.md  subsubsystem_one.md  subsystem_one.md
src/: main.cpp
src/include/: factorial.h  imgui.h  prime_factorial.h
src/ui/: gui.cpp  gui.h  themes.cpp  themes.h  window.cpp  window.h
src/utils/: console.cpp  console.h  logger.cpp  logger.h  profiler.cpp  profiler.h  singleton.h
src/utils/inputs/: input_devices.h  input_key.h  input_manager.cpp  input_manager.h  multiplatform_input.cpp  multiplatform_input.h
test/: factorial_test.h
